--- a/docker/Dockerfile.trino
+++ b/docker/Dockerfile.trino
@@ -2,12 +2,14 @@ FROM trinodb/trino:451
 
 USER root
 
+COPY resources/ranger-2.3.0-trino-plugin.tar /root/ranger-2.3.0-trino-plugin.tar
+
 RUN cd /root && \
-    curl https://github.com/aakashnand/trino-ranger-demo/releases/download/trino-ranger-demo-v1.0/ranger-2.3.0-trino-plugin.tar.gz --output ranger-2.3.0-trino-plugin.tar.gz -L && \
-    tar xvf ranger-2.3.0-trino-plugin.tar.gz
+    tar xvf ranger-2.3.0-trino-plugin.tar
 
 COPY resources/install.properties /root/ranger-2.3.0-trino-plugin/install.properties
 COPY resources/enable-trino-plugin.sh /root/ranger-2.3.0-trino-plugin/enable-trino-plugin.sh
 
-RUN chown root:root -R /root/ranger-2.3.0-trino-plugin/* && \
+RUN cd /root && \
+    chown root:root -R /root/ranger-2.3.0-trino-plugin/* && \
     /root/ranger-2.3.0-trino-plugin/enable-trino-plugin.sh
