--- a/charts/trino/templates/configmap-coordinator.yaml
+++ b/charts/trino/templates/configmap-coordinator.yaml
@@ -32,6 +32,7 @@ data:
     -Djdk.nio.maxCachedBufferSize=2000000
     # Allow loading dynamic agent used by JOL
     -XX:+EnableDynamicAgentLoading
+    -Dlogback.configurationFile=/etc/trino/trino-ranger-plugin-logback.xml
   {{/* only check the version number if the image is not overriden in any way */}}
   {{- with .Values.image -}}
   {{- if and (eq .repository "trinodb/trino") (not .useRepositoryAsSoleImageReference) (not .registry) (not .digest) (gt (default $.Chart.AppVersion .tag | int ) 447 ) }}
