--- a/resources/install.properties
+++ b/resources/install.properties
@@ -27,7 +27,7 @@ POLICY_MGR_URL=http://ranger-server.k8s.nb-prod.com
 # Example:
 # REPOSITORY_NAME=trinodev
 #
-REPOSITORY_NAME=trino
+REPOSITORY_NAME=hive
 
 # Configure INSTALL_ENV=docker if running trino in docker environment
 INSTALL_ENV=docker
@@ -46,8 +46,8 @@ COMPONENT_PLUGIN_DIR_NAME=/usr/lib/trino/plugin/ranger
 #XAAUDIT.SOLR.ZOOKEEPER=
 #XAAUDIT.SOLR.FILE_SPOOL_DIR=/var/log/trino/audit/solr/spool
 
-XAAUDIT.SOLR.ENABLE=false
-XAAUDIT.SOLR.URL=NONE
+XAAUDIT.SOLR.ENABLE=true
+XAAUDIT.SOLR.URL=http://data.ranger.solr.nb.com:6083/solr/ranger_audits
 XAAUDIT.SOLR.USER=NONE
 XAAUDIT.SOLR.PASSWORD=NONE
 XAAUDIT.SOLR.ZOOKEEPER=NONE
@@ -143,12 +143,15 @@ XAAUDIT.HDFS.LOCAL_BUFFER_ROLLOVER_INTERVAL_SECONDS=600
 XAAUDIT.HDFS.LOCAL_ARCHIVE_MAX_FILE_COUNT=10
 
 #Solr Audit Provider
-XAAUDIT.SOLR.IS_ENABLED=false
+XAAUDIT.SOLR.IS_ENABLED=true
 XAAUDIT.SOLR.MAX_QUEUE_SIZE=1
 XAAUDIT.SOLR.MAX_FLUSH_INTERVAL_MS=1000
-XAAUDIT.SOLR.SOLR_URL=http://localhost:6083/solr/ranger_audits
+XAAUDIT.SOLR.SOLR_URL=http://data.ranger.solr.nb.com:6083/solr/ranger_audits
 
 # End of V2 properties
+
+#Should audit be summarized at source
+XAAUDIT.SUMMARY.ENABLE=true
 
 #
 # SSL Client Certificate Information
