--- a/docker/Dockerfile.ranger
+++ b/docker/Dockerfile.ranger
@@ -7,21 +7,22 @@ RUN apt clean && apt update && \
     ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     echo $TZ > /etc/timezone && \
     apt install -y sudo curl wget bc python3 apt-transport-https gnupg ca-certificates && \
-    wget -qO /root/postgresql.jar https://jdbc.postgresql.org/download/postgresql-42.7.3.jar && \
+    wget -O /root/postgresql.jar https://jdbc.postgresql.org/download/postgresql-42.7.3.jar && \
     curl -s https://repos.azul.com/azul-repo.key | sudo gpg --dearmor -o /usr/share/keyrings/azul.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/azul.gpg] https://repos.azul.com/zulu/deb stable main" | sudo tee /etc/apt/sources.list.d/zulu.list && \
     sudo apt update -y && sudo apt install -y zulu11-jdk
 
 # add ranger admin
-RUN wget -qO /root/ranger-2.4.0-admin.tar.gz https://github.com/zer0beat/apache-ranger-compiled/releases/download/2.4.0/ranger-2.4.0-admin.tar.gz && \
-    tar -xzf ranger-2.4.0-admin.tar.gz && rm ranger-2.4.0-admin.tar.gz && mv ranger-2.4.0-admin ranger
+RUN wget -O /root/ranger-3.0.0-SNAPSHOT-admin.tar.gz https://github.com/aakashnand/trino-ranger-demo/releases/download/trino-ranger-demo-v1.0/ranger-3.0.0-SNAPSHOT-admin.tar.gz && \
+    cd /root && \
+    tar -xzf ranger-3.0.0-SNAPSHOT-admin.tar.gz && rm ranger-3.0.0-SNAPSHOT-admin.tar.gz && mv ranger-3.0.0-SNAPSHOT-admin ranger
 
 # elasticsearch compatibility fix
 RUN rm -f /root/ranger/ews/lib/lucene-core-*.jar&& \
-    wget -qO /root/ranger/ews/lib/lucene-core-8.7.0.jar https://repo1.maven.org/maven2/org/apache/lucene/lucene-core/8.7.0/lucene-core-8.7.0.jar
+    wget -O /root/ranger/ews/lib/lucene-core-8.7.0.jar https://repo1.maven.org/maven2/org/apache/lucene/lucene-core/8.7.0/lucene-core-8.7.0.jar
 
-COPY resources/docker-entrypoint.sh .
-RUN chmod +x docker-entrypoint.sh
+COPY resources/docker-entrypoint.sh /root/docker-entrypoint.sh
+RUN chmod +x /root/docker-entrypoint.sh
 
 ENV JAVA_HOME=/usr/lib/jvm/zulu11-ca-amd64
 
