--- a/charts/trino/values-stage-data.yaml
+++ b/charts/trino/values-stage-data.yaml
@@ -33,11 +33,17 @@ server:
         selectPolicy: Max
   config:
     https:
-      enabled: true
-      port: 8443
-      keystore:
-        path: "/home/trino/mykeystore.jks"
+      enabled: false
     authenticationType: "OAUTH2"
+  workerExtraConfig: |-
+    internal-communication.shared-secret=test-value
+  coordinatorExtraConfig: |-
+    internal-communication.shared-secret=test-value
+    http-server.process-forwarded=true
+    http-server.authentication.allow-insecure-over-http=true
+    http-server.authentication.oauth2.issuer=https://keycloak.n.newsbreak.com/auth/realms/master
+    http-server.authentication.oauth2.client-id=trino
+    http-server.authentication.oauth2.client-secret=06cd3178-dc7f-487b-89c4-6bdd906b61e8
 
 sidecarContainers:
   coordinator:
@@ -137,11 +143,10 @@ resourceGroups:
 additionalConfigProperties:
   - query.max-memory=10GB
   - query.max-memory-per-node=1400MB
-  - http-server.authentication.oauth2.issuer=https://keycloak.n.newsbreak.com/auth/realms/master
-  - http-server.authentication.oauth2.client-id=trino
-  - http-server.authentication.oauth2.client-secret=06cd3178-dc7f-487b-89c4-6bdd906b61e8
-  - internal-communication.shared-secret=c3RhZ2UtZGF0YS10ZXN0LXNlY3JldA==
-
+  - internal-communication.shared-secret=random-value-999
+additionalLogProperties:
+  - io.trino.server.security.oauth2=DEBUG
+  - io.trino.server.ui.OAuth2WebUiAuthenticationFilter=DEBUG
 additionalCatalogs:
   hive: |-
     connector.name=hive
