--- a/docker/Dockerfile.hue
+++ b/docker/Dockerfile.hue
@@ -1,2 +1,3 @@
 FROM gethue/hue:20240716-140101
-RUN ./build/env/bin/pip install --no-cache-dir mozilla_django_oidc
+RUN ./build/env/bin/pip install --no-cache-dir mozilla_django_oidc && \
+    ./build/env/bin/pip install trino[sqlalchemy]
